<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Takshak</string>
    <string name="title_activity_event_pager">Events</string>
    <string name="title_activity_news_feed">News Feed</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_cards_details">Details</string>
    <string name="title_activity_credits">Credits</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_showcase">Show Case Events</string>
    <string name="menu_devs">App Developers</string>
    <string name="menu_organizers">Takshak Organizers</string>
    <string name="action_settings">Settings</string>
    <string name="mace">MACE</string>
    <string name="mace_des">\nKothamangalam, a place better known as \"the gateway to western Ghats\" is not only a land known for fables and churches. This place owns one of the best engineering colleges in the state, the Mar Athanasius College of Engineering(MACE).The college for the past 52 years has constantly produced renowned personalities in the field of engineering. The first ever Christian management college in Asia, and the first college to have enrolled in the Mahatma Gandhi University, with over six branches of engineering and five post graduate cources, 3000 students presently being trained and over 12,000 notable alumina, MACE Proudly Holds the records and continues to make new ones.\n\nMACE also hosts a lush green ambience beautified by the symphonies of Mozart and Beethoven from the garden speakers that infuses a calm ,serene and refreshing environment. The collage promotes a wide variety of activities, be it educational or cultural and the different clubs play an important role in bringing out the best in the students.Every bit of information that a student could possibly wish for, is provided by the department libraries, state of the art workshops, I.T.centre and the central library that houses a mammoth collection of journals and papers, thus it could be said that life at MACE is truly a dream college life for every student.\n\n </string>
    <string name="t_title">TAKSHAK</string>
    <string name="takshak_des">\nEvery year, since its inception in the year 2009, TAKSHAK has become one of the most awaited technical festivals in the country. Last year MACE, due to Takshak, had experienced a lot of technical and intellectual brilliance. Not only did Takshak put together a jaw dropping show, but it also encouraged MACEians and its guests to stretch beyond their limits by making an attempt for the Guinness world record and also by giving them an experience of para-sailing.\n\nThe tradition continues and the awaited TAKSHAK is presented before you. The annual tech festival of MACE, this year takshak \'13 will be held on September 27, 28 2013 with the theme \'Shikshan he savu\'. TAKSHAK 13 will put together a venue, an arena where the best of techno savy students across te country will come face to face to showcase their excellence in various fields of science, technology and engineering. The main attraction of TAKSHAK is an all kerala quiz competition NOZIONE conducted for students of plus two level and an autoshow NITROZ REFUELED. TAKSHAK presents before you the various technical innovations in different engineering fields, a never before seen experience of an unbelievable world, where innovation meets creation.</string>
    <string name="home_title">Takshak \'13</string>
    <string name="takshak">takshak 2013</string>
    <string name="location">Location</string>
    <string name="nozione">Nozione</string>
    <string name="nozione_details">   NOZIONE is an All Kerala Inter School Quiz competition, organized as a part of Takshak ’13 - Annual Technical Festival of Mar Athanasius College of Engineering, Kothamangalam. NOZIONE invites all high school and higher secondary school students across Kerala on the quest to conquer knowledge.\nThe quiz will have have a preliminary selection process at 5 zones – Trivandrum, Kottayam, Ernakulam, Trissur and Kozhikode. At the most, two teams comprising of two members each shall participate from a school. Six teams will be selected from each zone on the basis of a written test, from which 2 would be shortlisted after a preliminary quiz . The prelims will be conducted on August 24 at respective centres at each zone. The selected 10 teams compete at the finals which would be held at Mar Athanasius College of Engineering on 27 September 2013, the inaugural day of Takshak.\nThe registration fees for each team is ₹ 100. An attractive prize money awaits the winners.\n\n1st Prize : ₹30,000\n2nd Prize : ₹15,000\n3rd Prize : ₹5,000\n</string>
    <string name="education_title">Education For All</string>
    <string name="education">\"Education is the most powerful weapon which you can use to change the world.\"\n-Nelson Mandela \n\nIn this time of national sorrow, MACE wants to do it\'s part in supporting the nation to rebuild a state with a rich cultural and religious heritage by donating a significant part of our turnover to this noble cause.Providing education for every individual regardless of age, sex and economic status should be an important goal in the development agenda of a country to ensure that the people around them have access to education.\nThrough Takshak 13 we aim to provide an opportunity to the less fortunate to make education accessible to them by donating a part of our collection to children who don\'t have the facilities to attain education. Let us join hands to achieve a future where every Indian can read, write and has access to education, to do our part in making a positive impact on the future of our nation.</string>
    <string name="flood_title">Rebuilding Uttarakhand</string>
    <string name="flood">The nation watched in horror as the worst disaster since the 2004 tsunami struck the Northern regions of India, centered in Uttarakhand, in the form of devastating floods and landslides caused by a multiday cloudburst in mid-June, this year. The gloom of utter helplessness settled in the minds of the people as affected areas were rendered inaccessible by the unrelenting rain, making it very difficult, if not impossible, to rescue or help rebuild the thousands of destroyed lives.\nThe rains have stopped, the water has gone down, but the disaster is far from over. Thousands have died, even more have lost their homes, loved ones and livelihoods - everything they once called their own. The memories of all that is lost is still fresh in the minds of the survivors. It\'s time to prove our strength as a nation, to emerge stronger from the face of disaster, to rise from the ashes like a phoenix from its flames.\n\nIn this time of national sorrow, MACE wants to do it\'s part in supporting the nation to rebuild a state with a rich cultural and religious heritage by donating a significant part of our turnover to this noble cause.</string>
    <string name="blank" />
    <string name="error_message">Please check your internet connection</string>

</resources>