<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/location"
        android:icon="@drawable/location"
        android:showAsAction="ifRoom"
        android:title="@string/location">
    </item>
    <item
        android:icon="@drawable/info"
        android:showAsAction="always" tools:ignore="MenuTitle">
        <menu>
            <item
                android:id="@+id/devs"
                android:showAsAction="never"
                android:title="@string/menu_devs">
            </item>
            <item
                android:id="@+id/organizers"
                android:title="@string/menu_organizers">
            </item>
        </menu>
    </item>
</menu>