<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/grey_background_pattern" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@android:color/white"
                    android:scaleType="centerCrop"
                    android:src="@drawable/education" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#80000000"
                    android:paddingLeft="10dp"
                    android:text="@string/education_title"
                    android:textColor="#ffffffff"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/white"
                android:orientation="vertical" >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="5dp"
                    android:background="#ff669900" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/education" >
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@android:color/white"
                    android:scaleType="center"
                    android:src="@drawable/flood" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#80000000"
                    android:paddingLeft="10dp"
                    android:text="@string/flood_title"
                    android:textColor="#ffffffff"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/white"
                android:orientation="vertical" >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="5dp"
                    android:background="#ff669900" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/flood" >
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>